# js-interpreter

./: .gitignore  LICENSE  README.md  pyproject.toml
js_runtime/: __init__.py  evaluator.py  js_run.py  js_types.py
